methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:44: error: type mismatch;
 found   : Unit
 required: Boolean
          forward()
                 ^SlugTracking:38: error: type mismatch;
 found   : Unit
 required: Boolean
      if (isBackingWall()==false){
      ^